<resources>
    <string name="app_name">Login Module</string>

    <!-- Network Errors-->
    <string name="networkError">Oh! You are not connected to a wifi or cellular data network. Please connect and try again</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>
    <string name="unknownError">Something went wrong!</string>
    <string name="requestTimeOutError">Oooops! We couldn’t capture your request in time. Please try again.</string>
    <string name="errorCodeMalformedJson">MALFORMED_JSON</string>
    <string name="responseMalformedJson">Oops! We hit an error. Try again later.</string>
    <string name="errorCodeConnectFailed">Connection failed</string>
    <string name="responseConnectFailed">Oops! Connection timeout.</string>

    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_out">Sign out</string>

    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_denied">Permission Denied</string>
</resources>
