<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cornered_border_top"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/pick_image_from"
        android:textAppearance="@style/CustomTextAppearance.Regular"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tvTitle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_left"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textAppearance="@style/CustomTextAppearance.Regular"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

        <View
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_right"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textAppearance="@style/CustomTextAppearance.Regular"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@id/tvTitle"
        android:background="@android:color/darker_gray" />
</RelativeLayout>

